real pipe, star.component

--- a/app/shared/star.component/star.component.html
+++ b/app/shared/star.component/star.component.html
@@ -1,5 +1,5 @@
 <div class="crop" 
-    [style.width.px]="starWidth"
+    [style.width.px]="starWitdh"
     [title]="rating"
     (click)='onClick()'>
     <div style="width: 86px">
