--- a/app/products/product-list.component.html
+++ b/app/products/product-list.component.html
@@ -42,9 +42,9 @@
                             [style.margin.px]='imageMargin'>
                         </td>
                         <td>{{ product.productName }}</td>
-                        <td>{{ product.productCode | lowercase}}</td>
+                        <td>{{ product.productCode }}</td>
                         <td>{{ product.releaseDate }}</td>
-                        <td>{{ product.price | currency:'USD':true:'1.2-2' | lowercase}}</td>
+                        <td>{{ product.price | realPipe}}</td>
                         <td>
                             <ai-star [rating]='product.starRating'
                             (ratingClicked)='onRaitingClicked($event)'></ai-star>
