--- a/app/products/product-detail.component.html
+++ b/app/products/product-detail.component.html
@@ -2,4 +2,50 @@
     <div class="panel-heading">
         {{pageTitle}}
     </div>
+    
+    <div *ngIf="product" class="panel-body">
+        <div class="row">            
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-lg-3">Name: </div>
+                    <div class="col-lg-6">{{product.productName}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">Code: </div>
+                    <div class="col-lg-6">{{product.productCode}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">Description: </div>
+                    <div class="col-lg-6">{{product.description}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">Availability</div>
+                    <div class="col-lg-6">{{product.releaseDate}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">Price</div>
+                    <div class="col-lg-6">{{product.price}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">5 star rating</div>
+                    <div class="col-lg-6">
+                        <ai-star [rating]='product.starRating'
+                        (ratingClicked)='onRaitingClicked($event)'></ai-star>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img 
+                    [src]='product.imageUrl' 
+                    [title]='product.productName'>
+            </div>
+        </div>
+    </div>
+        
+    
+    <div class="panel-footer">
+        <a class="btn btn-default" (click)='onBack()' style='width:80px'>
+            <i class="glyphicon glyphicon-chevron-left"></i>Back
+        </a>
+    </div>
 </div>
